--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,21 @@
 @import 'component/base';
 @import 'component/hero';
-@import 'component/navigation';
+@import 'component/navigations';
 @import 'component/responsive';
 @import 'component/variables';
+
+#banner {
+    background-color: grey;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+
+
+    .banners {
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+    }
+}
