--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
+@import 'component/variables';
 @import 'component/base';
 @import 'component/hero';
-@import 'component/navigation';
+@import 'component/navigations';
 @import 'component/responsive';
-@import 'component/variables';
+
