--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -1,2 +1,45 @@
 // _hero.scss
 // Buat styling banner semua disini
+
+#banner{
+    width: 100%;
+    height: 100vh;
+
+    &::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, .4);
+        position: absolute;
+        top: 0;
+    }
+
+    .banner-hero-home {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+
+        .main-slider-home {
+            width: 100%;
+            height: 100vh;
+
+
+
+            .banner-home-content{
+                width: 100%;
+                height: 100vh;
+
+                h1{
+                    font-family: $font-lato;
+                    font-size: 50px;
+                    color: #fff;
+                }
+            }
+        }
+    }
+
+}
+
+
+
