--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,20 +12,21 @@ p {
 
 #about img {
   position: relative;
-  top: 12px;
-  left: 12px;
-  opacity: .1;
 }
 
-#about .img::after {
+#about::before {
   content: '';
   display: block;
+  width: 382px;
+  height: 250px;
   position: absolute;
+  top: 120%;
+  left: 7.8%;
   border: 3px solid #67bb6a;
 }
 
 #about p {
-  padding-top: 100px;
+  padding-top: 90px;
 }
 
 #banner {
