--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,84 @@ p {
   color: #7F9280;
 }
 
+#product h1 {
+  color: #fff;
+}
+
+#product .card-body {
+  padding-top: 60%;
+}
+
+#product .card-body h5 {
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+#product .card-body p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+#testimonial h1 {
+  color: #fff;
+}
+
+#testimonial h2 {
+  font-family: "Lato", sans-serif;
+  font-size: 25px;
+  color: #FFE696;
+}
+
+#testimonial h3 {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  color: #fff;
+}
+
+#testimonial p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: #fff;
+}
+
+#news .card-body h2 {
+  font-family: "Lato", sans-serif;
+  font-size: 25px;
+  color: #57745B;
+}
+
+#news .card-body p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: #7f9280;
+}
+
+#news .card-body .bawah p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: #7F9280;
+  font-style: italic;
+}
+
+#news .card-body .bawah p span {
+  font-weight: bold;
+  color: #57745B;
+}
+
+#news .card-body .bawah a {
+  color: #57745B;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  text-decoration: none;
+}
+
 #about img {
   position: relative;
 }
@@ -27,6 +105,155 @@ p {
 
 #about p {
   padding-top: 90px;
+}
+
+#product {
+  background-image: url("../../assets/img/background/bg-product.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1078px;
+  width: 100%;
+  position: relative;
+}
+
+#product .product-atas {
+  height: 728px;
+  position: relative;
+}
+
+#product .product-atas .product {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 0;
+  z-index: 0;
+}
+
+#product .product-atas .atas {
+  position: relative;
+  top: 50px;
+  left: auto;
+  height: 627px;
+  border: 10px solid #fff;
+}
+
+#product .product-atas .atas .container .card {
+  border: none;
+}
+
+#product .product-atas .atas .container .card .card-body {
+  height: 310px;
+  background-image: url("../../assets/img/component/product1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: -30px 0px;
+}
+
+#product .product-atas .atas .container .card .card-body .product {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  cursor: pointer;
+  bottom: 0;
+  z-index: 0;
+}
+
+#product .product-atas .atas .container .card .card-body .product:hover {
+  background-color: #67BB6A;
+  opacity: .8;
+}
+
+#product .product-atas .atas .btn {
+  font-size: 12px;
+}
+
+#product .product-atas .atas .btn-outline-success {
+  height: 45px;
+  width: 200px;
+  border-color: #FEAC00;
+  color: #FEAC00;
+}
+
+#product .product-atas .atas .btn-outline-success:hover {
+  color: #fff;
+  background: #e96b00;
+  background: -webkit-gradient(linear, left top, right top, from(#e96b00), to(#feac00));
+  background: linear-gradient(90deg, #e96b00 0%, #feac00 100%);
+  border-color: #e96b00;
+}
+
+#product .product-bawah {
+  height: 350px;
+  position: relative;
+}
+
+#product .product-bawah .product {
+  width: 100%;
+  height: 100%;
+  background-color: #67BB6A;
+  opacity: .8;
+  position: absolute;
+  bottom: 0;
+  z-index: 0;
+}
+
+#product .product-bawah .quotes p {
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+#product .product-bawah .quotes p::before {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 117px;
+  position: relative;
+  top: 55px;
+  right: 53px;
+  background-image: url("../../assets/img/component/asset1.png");
+}
+
+#product .product-bawah .quotes p::after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 117px;
+  position: relative;
+  top: -28px;
+  left: 933px;
+  background-image: url("../../assets/img/component/asset2.png");
+}
+
+#founders hr {
+  width: 200px;
+  border-top: 5px solid #FEAC0099;
+}
+
+#testimonial {
+  height: 523px;
+  background-color: #86C17B;
+}
+
+#news .gambar {
+  height: 352px;
+}
+
+#news .gambar1 {
+  background-image: url("../../assets/img/component/news-1.png");
+}
+
+#news .gambar2 {
+  background-image: url("../../assets/img/component/news-2.png");
+}
+
+#news .gambar3 {
+  background-image: url("../../assets/img/component/news-3.png");
 }
 
 #banner {
