--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -1,4 +1,4 @@
-
+// Banner Home
 // Banner Home
 #banner {
     width: 100%;
@@ -13,14 +13,32 @@
 
             .main-slider-home {
                 height: 100vh;
+
+                .content-banner {
+                    height: 100%;
+
+                    &::after {
+                        content: '';
+                        background-color: black;
+                        width: 100%;
+                        height: 100vh;
+                        opacity: .4;
+                    }
+                }
+            }
+
+            .btn-play-video {
+                position: absolute;
+                top: 50%;
+                cursor: pointer;
             }
 
             .hero-title-banner {
                 position: absolute;
-                top: 50%;
+                z-index: 2;
 
                 h1 {
-                    font-family: 'Lato', sans-serif;
+                    font-family: $font-lato;
                     font-weight: bold;
                     color: #fff;
                     font-size: 60px;
@@ -36,64 +54,17 @@
             height: 50px;
 
             .thumbnail-slider-home {
-                width: 100%;
+                width: 100% !important;
+                padding: 5px;
 
                 h1 {
                     color: white;
                     font-size: 60px;
-                    font-family: 'Lato', sans-serif;
+                    font-family: $font-montserrat;
                     opacity: .2;
                     position: relative;
                 }
             }
-
-            .slick-list {
-                &.draggable {
-                    padding: 0 !important;
-                }
-            }
-
-            .slick-track {
-                opacity: 1;
-                width: 1710px;
-                transform: translate3d(-570px, 0px, 0px);
-
-                // .slick-slide {
-                //     h1 {
-                //         display: none;
-                //     }
-
-                //     &.slick-current {
-                //         h1 {
-                //             display: block;
-                //         }
-                //     }
-                // }
-            }
-
-            .arrowLeftBannerHome {
-                border: none;
-                background: transparent;
-                position: absolute;
-                top: 50px;
-                left: -15%;
-                width: 10%;
-            }
-
-            .arrowRightBannerHome {
-                border: none;
-                background: transparent;
-                position: absolute;
-                top: 100px;
-                left: -14%;
-                width: 10%;
-
-            //     &::before {
-            //         // border-bottom: 1px solid red;
-            //         // border-width: 40px;
-            //     }
-            }
         }
     }
 }
-
