--- a/assets/css/component/_navigations.scss
+++ b/assets/css/component/_navigations.scss
@@ -1,26 +1,67 @@
 // _navigations.scss
 // Buat styling navigations semua disini
 
+header {
+    nav {
+        background: transparent !important;
+        height: 70px;
 
-.navbar {
-    .nav-link {
-        font-size: 20px;
-        color: #fff !important;
-    }
-    .btn {
-        font-size: 14px;
-       
-    }
+        &.shadow {
+            background-color: $primary-color !important;
+        }
 
-    .btn-outline-success {
-        border-color: #FEAC00;
-        color: #FEAC00;
-      }
-      
-    .btn-outline-success:hover {
-        color: #fff;
-        background: rgb(233, 107, 0);
-        background: linear-gradient(90deg, rgba(233,107,0,1) 0%, rgba(254,172,0,1) 100%);
-        border-color: rgb(233, 107, 0);
-      }
+        .navbar-brand {
+            .brand-logo {
+                max-width: 50px;
+
+                img {
+                    position: relative;
+                    margin-top: 40%;
+                }
+
+                &::before {
+                    content: '';
+                    background-color: white;
+                    width: 70px;
+                    height: 80px;
+                    position: absolute;
+                    z-index: 0;
+                    top: 0;
+                    border-bottom-left-radius: 40px;
+                    border-bottom-right-radius: 40px;
+                }
+            }
+        }
+
+        #navbarNav {
+            ul {
+                .link-menu {
+                    display: flex;
+                    align-items: center;
+                    margin-right: 30px;
+
+                    .nav-item {
+                        margin: 0 10px;
+
+                        .nav-link {
+                            font-family: $font-montserrat;
+                            font-size: 16px;
+                            color: white;
+                            text-decoration: none;
+
+                            &:hover {
+                                color: #CACACA;
+                            }
+                        }
+                    }
+                }
+
+                .button-navbar {
+                    .btn-primary {
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+    }
 }
