--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,259 +1,97 @@
-h1 {
-  font-family: "Lato", sans-serif;
-  font-size: 50px;
-  color: #67BB6A;
+.padding-section {
+  padding: 10% 0;
 }
 
-p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  color: #7F9280;
-}
-
-#product h1 {
-  color: #fff;
-}
-
-#product .card-body {
-  padding-top: 60%;
-}
-
-#product .card-body h5 {
-  font-family: "Lato", sans-serif;
-  font-size: 30px;
-  color: #fff;
-  position: relative;
-  z-index: 1;
-}
-
-#product .card-body p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  color: #fff;
-  position: relative;
-  z-index: 1;
-}
-
-#testimonial h1 {
-  color: #fff;
-}
-
-#testimonial h2 {
-  font-family: "Lato", sans-serif;
-  font-size: 25px;
-  color: #FFE696;
-}
-
-#testimonial h3 {
-  font-family: "Lato", sans-serif;
-  font-size: 18px;
-  color: #fff;
-}
-
-#testimonial p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 15px;
-  color: #fff;
-}
-
-#news .card-body h2 {
-  font-family: "Lato", sans-serif;
-  font-size: 25px;
-  color: #57745B;
-}
-
-#news .card-body p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 15px;
-  color: #7f9280;
-}
-
-#news .card-body .bawah p {
-  font-family: "Montserrat", sans-serif;
-  font-size: 12px;
-  color: #7F9280;
-  font-style: italic;
-}
-
-#news .card-body .bawah p span {
-  font-weight: bold;
-  color: #57745B;
-}
-
-#news .card-body .bawah a {
-  color: #57745B;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-#about img {
-  position: relative;
-}
-
-#about::before {
-  content: '';
-  display: block;
-  width: 382px;
-  height: 250px;
+.arrowLeftBannerHome {
+  border: none;
+  background: transparent;
   position: absolute;
-  top: 120%;
-  left: 7.8%;
-  border: 3px solid #67bb6a;
+  top: 10px;
+  left: -15%;
+  width: 15%;
 }
 
-#about p {
-  padding-top: 90px;
-}
-
-#product {
-  background-image: url("../../assets/img/background/bg-product.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 1078px;
-  width: 100%;
-  position: relative;
-}
-
-#product .product-atas {
-  height: 728px;
-  position: relative;
-}
-
-#product .product-atas .product {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+.arrowRightBannerHome {
+  border: none;
+  background: transparent;
   position: absolute;
-  bottom: 0;
-  z-index: 0;
+  top: 60px;
+  left: -14%;
+  width: 15%;
 }
 
-#product .product-atas .atas {
-  position: relative;
-  top: 50px;
-  left: auto;
-  height: 627px;
-  border: 10px solid #fff;
-}
-
-#product .product-atas .atas .container .card {
+.arrowPrev {
+  position: absolute;
+  left: -10%;
+  top: 30%;
+  -webkit-transform: translate(30%, -10%);
+          transform: translate(30%, -10%);
+  background: transparent;
   border: none;
 }
 
-#product .product-atas .atas .container .card .card-body {
-  height: 310px;
-  background-image: url("../../assets/img/component/product1.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: -30px 0px;
-}
-
-#product .product-atas .atas .container .card .card-body .product {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+.arrowNext {
   position: absolute;
-  cursor: pointer;
-  bottom: 0;
-  z-index: 0;
+  right: -5%;
+  top: 30%;
+  -webkit-transform: translate(30%, -5%);
+          transform: translate(30%, -5%);
+  background: transparent;
+  border: none;
 }
 
-#product .product-atas .atas .container .card .card-body .product:hover {
-  background-color: #67BB6A;
-  opacity: .8;
+.btn.btn-primary {
+  border-radius: 0;
+  background: -webkit-gradient(linear, left top, right top, from(#FEAC00), to(#E96B00));
+  background: linear-gradient(90deg, #FEAC00 0%, #E96B00 100%);
+  border: none;
+  padding: 10.5px 30px;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
 }
 
-#product .product-atas .atas .btn {
-  font-size: 12px;
+.btn.btn-primary:hover {
+  border-radius: 10px;
+  background: -webkit-gradient(linear, left top, right top, from(#E96B00), to(#FEAC00));
+  background: linear-gradient(90deg, #E96B00 0%, #FEAC00 100%);
+  border: none;
+  padding: 10.5px 30px;
+  -webkit-transition: ease-in-out .5;
+  transition: ease-in-out .5;
 }
 
-#product .product-atas .atas .btn-outline-success {
-  height: 45px;
-  width: 200px;
-  border-color: #FEAC00;
-  color: #FEAC00;
+.btn.btn-secondary {
+  border-radius: 0;
+  background: transparent;
+  border: 1px solid #FEAC00;
+  padding: 10.5px 30px;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
 }
 
-#product .product-atas .atas .btn-outline-success:hover {
-  color: #fff;
-  background: #e96b00;
-  background: -webkit-gradient(linear, left top, right top, from(#e96b00), to(#feac00));
-  background: linear-gradient(90deg, #e96b00 0%, #feac00 100%);
-  border-color: #e96b00;
+.btn.btn-secondary:hover {
+  border-radius: 0;
+  background: -webkit-gradient(linear, left top, right top, from(#E96B00), to(#FEAC00));
+  background: linear-gradient(90deg, #E96B00 0%, #FEAC00 100%);
+  border: 1px solid #FEAC00;
+  padding: 10.5px 30px;
+  -webkit-transition: ease-in-out .5;
+  transition: ease-in-out .5;
 }
 
-#product .product-bawah {
-  height: 350px;
-  position: relative;
-}
-
-#product .product-bawah .product {
-  width: 100%;
-  height: 100%;
-  background-color: #67BB6A;
-  opacity: .8;
-  position: absolute;
-  bottom: 0;
-  z-index: 0;
-}
-
-#product .product-bawah .quotes p {
+.section-title h1 {
   font-family: "Lato", sans-serif;
-  font-size: 30px;
-  color: #FFFFFF;
-  text-align: center;
-  position: relative;
-  z-index: 1;
+  font-size: 42px;
+  font-weight: bold;
+  color: #67BB6A;
+  margin-bottom: 90px;
 }
 
-#product .product-bawah .quotes p::before {
-  content: '';
-  display: block;
-  width: 60px;
-  height: 117px;
-  position: relative;
-  top: 55px;
-  right: 53px;
-  background-image: url("../../assets/img/component/asset1.png");
-}
-
-#product .product-bawah .quotes p::after {
-  content: '';
-  display: block;
-  width: 60px;
-  height: 117px;
-  position: relative;
-  top: -28px;
-  left: 933px;
-  background-image: url("../../assets/img/component/asset2.png");
-}
-
-#founders hr {
-  width: 200px;
-  border-top: 5px solid #FEAC0099;
-}
-
-#testimonial {
-  height: 523px;
-  background-color: #86C17B;
-}
-
-#news .gambar {
-  height: 352px;
-}
-
-#news .gambar1 {
-  background-image: url("../../assets/img/component/news-1.png");
-}
-
-#news .gambar2 {
-  background-image: url("../../assets/img/component/news-2.png");
-}
-
-#news .gambar3 {
-  background-image: url("../../assets/img/component/news-3.png");
+.paragraph p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  line-height: 23px;
+  color: #7F9280;
 }
 
 #banner {
@@ -272,13 +110,31 @@ p {
   height: 100vh;
 }
 
-#banner .banner-hero-home .main-slider-banner-home .hero-title-banner {
+#banner .banner-hero-home .main-slider-banner-home .main-slider-home .content-banner {
+  height: 100%;
+}
+
+#banner .banner-hero-home .main-slider-banner-home .main-slider-home .content-banner::after {
+  content: '';
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  opacity: .4;
+}
+
+#banner .banner-hero-home .main-slider-banner-home .btn-play-video {
   position: absolute;
   top: 50%;
+  cursor: pointer;
+}
+
+#banner .banner-hero-home .main-slider-banner-home .hero-title-banner {
+  position: absolute;
+  z-index: 2;
 }
 
 #banner .banner-hero-home .main-slider-banner-home .hero-title-banner h1 {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: bold;
   color: #fff;
   font-size: 60px;
@@ -293,80 +149,315 @@ p {
 }
 
 #banner .banner-hero-home .thumbnail-slider-banner-home .thumbnail-slider-home {
-  width: 100%;
+  width: 100% !important;
+  padding: 5px;
 }
 
 #banner .banner-hero-home .thumbnail-slider-banner-home .thumbnail-slider-home h1 {
   color: white;
   font-size: 60px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Montserrat", sans-serif;
   opacity: .2;
   position: relative;
 }
 
-#banner .banner-hero-home .thumbnail-slider-banner-home .slick-list.draggable {
-  padding: 0 !important;
+header nav {
+  background: transparent !important;
+  height: 70px;
 }
 
-#banner .banner-hero-home .thumbnail-slider-banner-home .slick-track {
-  opacity: 1;
-  width: 1710px;
-  -webkit-transform: translate3d(-570px, 0px, 0px);
-          transform: translate3d(-570px, 0px, 0px);
+header nav.shadow {
+  background-color: #67BB6A !important;
 }
 
-#banner .banner-hero-home .thumbnail-slider-banner-home .arrowLeftBannerHome {
-  border: none;
-  background: transparent;
+header nav .navbar-brand .brand-logo {
+  max-width: 50px;
+}
+
+header nav .navbar-brand .brand-logo img {
+  position: relative;
+  margin-top: 40%;
+}
+
+header nav .navbar-brand .brand-logo::before {
+  content: '';
+  background-color: white;
+  width: 70px;
+  height: 80px;
   position: absolute;
-  top: 50px;
-  left: -15%;
-  width: 10%;
+  z-index: 0;
+  top: 0;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 
-#banner .banner-hero-home .thumbnail-slider-banner-home .arrowRightBannerHome {
-  border: none;
-  background: transparent;
-  position: absolute;
-  top: 100px;
-  left: -14%;
-  width: 10%;
+header nav #navbarNav ul .link-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 30px;
 }
 
-.navbar .nav-link {
-  font-size: 20px;
-  color: #fff !important;
+header nav #navbarNav ul .link-menu .nav-item {
+  margin: 0 10px;
 }
 
-.navbar .btn {
-  font-size: 14px;
+header nav #navbarNav ul .link-menu .nav-item .nav-link {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
 }
 
-.navbar .btn-outline-success {
-  border-color: #FEAC00;
-  color: #FEAC00;
+header nav #navbarNav ul .link-menu .nav-item .nav-link:hover {
+  color: #CACACA;
 }
 
-.navbar .btn-outline-success:hover {
-  color: #fff;
-  background: #e96b00;
-  background: -webkit-gradient(linear, left top, right top, from(#e96b00), to(#feac00));
-  background: linear-gradient(90deg, #e96b00 0%, #feac00 100%);
-  border-color: #e96b00;
+header nav #navbarNav ul .button-navbar .btn-primary {
+  margin-right: 10px;
 }
 
-#banner {
-  background-color: grey;
-  height: 100vh;
-  width: 100%;
+#about-us .image-about-column img {
   position: relative;
 }
 
-#banner .banners {
-  background-size: cover;
-  background-position: center;
+#about-us .image-about-column::before {
+  content: '';
+  border: 3px solid #67BB6A;
   position: absolute;
+  width: 85%;
+  height: 95%;
+  top: -10%;
+}
+
+#about-us .desc-about-us {
+  padding-left: 30px;
+}
+
+#our-product {
+  background: url("/assets/img/component/bg-section-product.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 50px 0;
+}
+
+#our-product .product-content {
+  border: 8px solid white;
+  width: 90%;
+}
+
+#our-product .padding-section {
+  padding: 5% 0;
+}
+
+#our-product .section-title h1 {
+  font-family: "Lato", sans-serif;
+  font-size: 42px;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 50px;
+}
+
+#our-product .product-cat .card-product {
+  padding: 10px 20px;
+  height: 310px;
+}
+
+#our-product .product-cat .card-product h4 {
+  margin-top: auto;
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#our-product .product-cat .card-product p {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+}
+
+#our-product .button-product-home {
+  margin-top: 50px;
+}
+
+#quotes .quotes-overlay {
+  background-color: #86C17B;
+  opacity: .6;
+}
+
+#quotes .quotes-overlay .quotes-title {
+  padding: 0 50px;
+}
+
+#quotes .quotes-overlay .quotes-title h1 {
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  font-style: italic;
+  color: white;
+}
+
+#testimoni {
+  background-color: #86C17B;
+}
+
+#testimoni .section-title h1 {
+  color: white;
+}
+
+#testimoni .content-slider-testimoni .slider-testimoni .content-testimoni h1 {
+  font-family: "Lato", sans-serif;
+  font-size: 25px;
+  color: #FFE696;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+#testimoni .content-slider-testimoni .slider-testimoni .content-testimoni h4 {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  color: white;
+  line-height: 23px;
+  font-style: italic;
+}
+
+#testimoni .content-slider-testimoni .slider-testimoni .content-testimoni p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: white;
+  line-height: 20px;
+  font-weight: 300;
+}
+
+#news-home .card-news {
+  border: none;
+}
+
+#news-home .card-news .content-news-image {
   width: 100%;
-  height: 100vh;
+  height: 352px;
+  background-color: black;
+}
+
+#news-home .card-news .content-news-desc {
+  padding: 20px 0;
+}
+
+#news-home .card-news .content-news-desc h1 {
+  font-family: "Lato", sans-serif;
+  color: #57745B;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+#news-home .card-news .content-news-desc p {
+  font-family: "Montserrat", sans-serif;
+  color: #57745B;
+  font-size: 15px;
+  line-height: 25px;
+}
+
+#news-home .card-news .content-news-desc .news-footer .news-date {
+  font-family: "Montserrat", sans-serif;
+  color: #57745B;
+  font-size: 12px;
+  line-height: 15px;
+  font-style: italic;
+}
+
+#news-home .card-news .content-news-desc .news-footer .news-date span {
+  font-weight: bold;
+}
+
+#news-home .card-news .content-news-desc .news-footer .news-more a {
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: #57745B;
+}
+
+#news-home .button-news-home {
+  margin-top: 50px;
+}
+
+#section-footer {
+  padding: 50px 0;
+  background-color: #67BB6A;
+}
+
+#section-footer .subscribe {
+  margin-bottom: 30px;
+}
+
+#section-footer .subscribe .title-subscribe h1 {
+  font-family: "Lato", sans-serif;
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+#section-footer .subscribe .input-email-subs input {
+  border: 1px solid white;
+  background: transparent;
+  border-radius: 0;
+  color: white !important;
+  padding: 20.5px 30px;
+}
+
+#section-footer .subscribe .input-email-subs input:focus {
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#section-footer .link-footer .footer-content h4 {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  line-height: 30px;
+}
+
+#section-footer .link-footer .footer-content.address-footer p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: white;
+  line-height: 20px;
+}
+
+#section-footer .link-footer .footer-content.menu-footer {
+  text-align: right;
+}
+
+#section-footer .link-footer .footer-content.menu-footer .link-cs a {
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: white;
+  line-height: 25px;
+}
+
+footer {
+  background-color: #57745B;
+  padding: 15px 80px;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+}
+
+footer .social-media {
+  text-align: right;
+}
+
+footer .social-media a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
