--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,19 +222,27 @@ header nav #navbarNav ul .button-navbar .btn-primary {
 
 @media (max-width: 375px) {
   /*NEWS*/
-  #banner .overlay {
-    margin-left: 20% !important;
-  }
   #newscontent img {
-    max-width: 280px !important;
+    max-width: 300px !important;
+  }
+  #newscontent .card-block {
+    width: 300px !important;
+  }
+  #newscontent .col-md-2 {
+    margin-top: 50px;
+  }
+  #newscontent .more a {
+    font-weight: 600;
+    text-decoration: none;
+    color: #67BB6A;
+    position: absolute;
+    bottom: 0;
+    right: -85px;
   }
 }
 
 @media (max-width: 768px) {
   /*SIGN UP*/
-  #signup .left {
-    display: none;
-  }
   #signup .right #title {
     font-size: 35px !important;
   }
@@ -250,11 +258,15 @@ header nav #navbarNav ul .button-navbar .btn-primary {
     background: linear-gradient(90deg, #e96b00 0%, #feac00 100%);
   }
   /*NEWS*/
-  #banner .overlay {
-    margin-top: -60% !important;
-  }
   #newscontent {
-    margin-bottom: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
   }
   #newscontent .card-title {
     margin-top: 10px;
@@ -524,6 +536,15 @@ body #signup {
   background-color: #7F9280;
 }
 
+body #signup .row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 #signup .left {
   background-image: url(../img/background/bg-sign-up.png);
   background-position: center;
@@ -533,8 +554,17 @@ body #signup {
 }
 
 #signup .right {
-  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 50px;
+  background-color: #7F9280;
 }
 
 #signup .right #title {
@@ -547,12 +577,8 @@ body #signup {
   font-size: 20px;
 }
 
-#signup .right form {
-  margin-top: 20px;
-}
-
-#signup .right form .tgl {
-  margin-top: 30px;
+#signup .right .tgl label {
+  visibility: hidden;
 }
 
 form .form-control {
@@ -580,6 +606,15 @@ form .form-control {
 
 /* NEWS */
 #banner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url("../img/background/bg-blog.png");
   background-size: cover;
   background-position: center;
@@ -591,13 +626,11 @@ form .form-control {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  position: relative;
+  position: absolute;
   z-index: 3;
 }
 
 #banner .overlay {
-  margin-top: -25%;
-  margin-left: 45%;
   font-family: "Lato", sans-serif;
   font-size: 60px;
   font-weight: bold;
@@ -639,6 +672,7 @@ form .form-control {
   bottom: 0;
   font-family: "Montserrat", sans-serif;
   font-style: italic;
+  font-size: 13px;
 }
 
 #newscontent .details .category {
@@ -651,6 +685,7 @@ form .form-control {
   bottom: 0;
   right: 0;
   font-family: "Montserrat", sans-serif;
+  font-size: 11px;
 }
 
 #newscontent .more a {
@@ -661,14 +696,14 @@ form .form-control {
 
 .col-md-2 p {
   font-family: "Montserrat", sans-serif;
-  font-size: 13px;
+  font-size: 11px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 #newscontent button {
-  border-radius: 4px;
+  border-radius: 0px;
   width: 10em;
   background: #e96b00;
   background: -webkit-gradient(linear, left top, right top, from(#e96b00), to(#feac00));
@@ -685,6 +720,17 @@ form .form-control {
 .col-md-2 .titlenews a {
   text-decoration: none !important;
   color: black !important;
+}
+
+.archive .dropdown {
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+}
+
+.archive .dropdown .dropdown-menu {
+  border: none;
+  margin-left: 10px;
+  font-size: 13px;
 }
 
 .archive a {
