--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -288,6 +288,11 @@ footer {
 body #signup{
     color: #ffffff;
     background-color: #7F9280;
+
+    .row{
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 #signup .left{
@@ -299,8 +304,11 @@ body #signup{
 }
 
 #signup .right{
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 50px;
+    background-color: #7F9280;
 
     #title{
         font-family: $font-montserrat;
@@ -308,18 +316,21 @@ body #signup{
     }
 }
 
+// #signup .right #tgllahir{
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: nowrap;
+// }
+
 #signup .right .form label{
     font-family: $font-montserrat;
     font-size: 20px;
 }
 
-#signup .right form{
-    margin-top: 20px;
-
-    .tgl{
-        margin-top: 30px;
+#signup .right .tgl label{
+        visibility: hidden;
     }
-}
+
 
 form .form-control{
     border-radius: 30px;
@@ -346,6 +357,9 @@ form .form-control{
 /* NEWS */
 
 #banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url('../img/background/bg-blog.png');
     background-size: cover;
     background-position: center;
@@ -357,13 +371,11 @@ form .form-control{
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    position: relative;
+    position: absolute;
     z-index: 3;
 }
 
 #banner .overlay{
-    margin-top: -25%;
-    margin-left: 45%;
     font-family: $font-lato;
     font-size: 60px;
     font-weight: bold;
@@ -406,6 +418,7 @@ form .form-control{
     bottom: 0;
     font-family: $font-montserrat;
     font-style: italic;
+    font-size: 13px;
 
     .category{
         font-weight: bold;
@@ -419,6 +432,7 @@ form .form-control{
     bottom: 0;
     right: 0;
     font-family: $font-montserrat;
+    font-size: 11px;
 
     a{
         font-weight: 600;
@@ -430,14 +444,14 @@ form .form-control{
 
 .col-md-2 p{
    font-family: $font-montserrat;
-   font-size: 13px;
+   font-size: 11px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis; 
 }
 
 #newscontent button{
-   border-radius: 4px;
+   border-radius: 0px;
    width: 10em;
    background: rgb(233,107,0);
    background: linear-gradient(90deg, rgba(233,107,0,1) 0%, rgba(254,172,0,1) 100%);
@@ -455,10 +469,17 @@ form .form-control{
     color: black !important;
 }
 
-// .archive .dropdown .dropdown-menu{
-//    border: none;
-//    margin-left: 10px;
-// }
+.archive .dropdown{
+    font-family: $font-montserrat;
+    font-size: 13px;
+
+    .dropdown-menu{
+    border: none;
+    margin-left: 10px;
+    font-size: 13px;
+    }
+}
+
 .archive a{
     text-decoration: none !important;
     color: black !important;
