--- a/assets/css/component/_hero.scss
+++ b/assets/css/component/_hero.scss
@@ -10,6 +10,7 @@
     .banner-hero-home {
         .main-slider-banner-home {
             position: relative;
+            height: 100vh;
 
             .main-slider-home {
                 height: 100vh;
