--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@
   width: 15%;
 }
 
+.arrowLeftBannerHome:focus {
+  outline: none;
+}
+
 .arrowRightBannerHome {
   border: none;
   background: transparent;
@@ -18,6 +22,10 @@
   top: 60px;
   left: -14%;
   width: 15%;
+}
+
+.arrowRightBannerHome:focus {
+  outline: none;
 }
 
 .arrowPrev {
@@ -30,6 +38,10 @@
   border: none;
 }
 
+.arrowPrev:focus {
+  outline: none;
+}
+
 .arrowNext {
   position: absolute;
   right: -5%;
@@ -40,10 +52,20 @@
   border: none;
 }
 
+.arrowNext:focus {
+  outline: none;
+}
+
+.btn {
+  -webkit-transition: .5s;
+  transition: .5s;
+  background-size: 200% auto;
+}
+
 .btn.btn-primary {
   border-radius: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#FEAC00), to(#E96B00));
-  background: linear-gradient(90deg, #FEAC00 0%, #E96B00 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(#ffad00), color-stop(51%, #ff7300), to(#ffad00));
+  background-image: linear-gradient(to right, #ffad00 0%, #ff7300 51%, #ffad00 100%);
   border: none;
   padding: 10.5px 30px;
   font-size: 16px;
@@ -52,8 +74,7 @@
 
 .btn.btn-primary:hover {
   border-radius: 10px;
-  background: -webkit-gradient(linear, left top, right top, from(#E96B00), to(#FEAC00));
-  background: linear-gradient(90deg, #E96B00 0%, #FEAC00 100%);
+  background-position: right center;
   border: none;
   padding: 10.5px 30px;
   -webkit-transition: ease-in-out .5;
@@ -70,13 +91,13 @@
 }
 
 .btn.btn-secondary:hover {
-  border-radius: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#E96B00), to(#FEAC00));
-  background: linear-gradient(90deg, #E96B00 0%, #FEAC00 100%);
+  border-radius: 10px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#E96B00), to(#FEAC00));
+  background-image: linear-gradient(90deg, #E96B00 0%, #FEAC00 100%);
   border: 1px solid #FEAC00;
   padding: 10.5px 30px;
-  -webkit-transition: ease-in-out .5;
-  transition: ease-in-out .5;
+  -webkit-transition: background-image ease-in-out .5;
+  transition: background-image ease-in-out .5;
 }
 
 .section-title h1 {
@@ -104,6 +125,7 @@
 
 #banner .banner-hero-home .main-slider-banner-home {
   position: relative;
+  height: 100vh;
 }
 
 #banner .banner-hero-home .main-slider-banner-home .main-slider-home {
