--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,7 @@
 }
 
 #our-product {
-    background: url('/assets/img/component/bg-section-product.png');
+    background: url('../img/component/bg-section-product.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,20 +55,43 @@
     }
 
     .product-cat {
+        
         .card-product {
             padding: 10px 20px;
             height: 310px;
 
+            .product {
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, .6);
+                position: absolute;
+                cursor: pointer;
+                margin-left: -20px;
+                bottom: 0;
+                z-index: 0;
+
+                &:hover{
+                    background-color: #67BB6A;
+                    opacity: .8;
+                }
+            }
+
             h4 {
                 margin-top: auto;
                 font-family: $font-lato;
+                color: #fff;
                 font-size: 30px;
                 font-weight: bold;
+                position: relative;
+                z-index: 1;
             }
 
             p {
                 font-size: 14px;
+                color: #fff;
                 font-family: $font-montserrat;
+                position: relative;
+                z-index: 1;
             }
         }
     }
@@ -93,6 +116,32 @@
                 color: white;
             }
         }
+    }
+}
+
+#founders {
+    .lineatas {
+        background: url('../img/vector/line.svg');
+        position: relative;
+        top: 0;
+        left: 110px;
+        height: 100px;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-position: 110%;
+        
+    }
+
+    .linebawah {
+        background: url('../img/vector/vector-2.svg');
+        position: relative;
+        top: 0;
+        left: -110px;
+        height: 100px;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-position: -20%;
+        
     }
 }
 
@@ -137,6 +186,7 @@
 }
 
 #news-home {
+    position: relative;
     .card-news {
         border: none;
 
@@ -192,6 +242,17 @@
     .button-news-home {
         margin-top: 50px;
     }
+
+    .vektor-news {
+        background: url('../img/vector/vector-3.svg');
+        position: absolute;
+        bottom: 0;
+        left: -138px;
+        height: 185px;
+        width: 100%;
+        background-repeat: no-repeat;
+        // background-position: -20%;
+    }
 }
 
 #section-footer {
@@ -225,7 +286,13 @@
                     box-shadow: none;
                 }
             }
-        }
+        }  
+    }
+
+    .purchase-footer .row {
+        // max-width: 300px;
+        padding-left: 130px;
+        padding-right: 130px;
     }
 
     .link-footer {
